// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Cart Button should render correctly when cart is empty (itemCount undefined/zero) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "justifyContent": "center",
      "marginRight": 16,
      "opacity": 1,
      "padding": 4,
    }
  }
>
  <View
    style={
      {
        "position": "relative",
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#152b4eff",
            "fontSize": 20,
          },
          undefined,
          {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          undefined,
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Header Cart Button should render correctly with a few items in the cart 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "justifyContent": "center",
      "marginRight": 16,
      "opacity": 1,
      "padding": 4,
    }
  }
>
  <View
    style={
      {
        "position": "relative",
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#152b4eff",
            "fontSize": 20,
          },
          undefined,
          {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          undefined,
        ]
      }
    >
      
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(91, 149, 200, 0.8)",
          "borderRadius": 10,
          "height": 18,
          "justifyContent": "center",
          "minWidth": 18,
          "paddingHorizontal": 4,
          "position": "absolute",
          "right": -12,
          "top": -4,
          "zIndex": -1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 8,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        3
      </Text>
    </View>
  </View>
</View>
`;

exports[`Header Cart Button should render correctly with a large number of items in the cart 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "justifyContent": "center",
      "marginRight": 16,
      "opacity": 1,
      "padding": 4,
    }
  }
>
  <View
    style={
      {
        "position": "relative",
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#152b4eff",
            "fontSize": 20,
          },
          undefined,
          {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          undefined,
        ]
      }
    >
      
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(91, 149, 200, 0.8)",
          "borderRadius": 10,
          "height": 18,
          "justifyContent": "center",
          "minWidth": 18,
          "paddingHorizontal": 4,
          "position": "absolute",
          "right": -12,
          "top": -4,
          "zIndex": -1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 8,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        99
      </Text>
    </View>
  </View>
</View>
`;
